# QGeoMarine-dev

./: .gitignore  BETA_LICENSE.txt  MANIFEST.in  README.md  gitignore  pyproject.toml  requirements.txt
docs/screenshots/: desktop.ini
src/: Deconvolution.py  Filters.py  Gains.py  Grids.py  Interpretation.py  Maggy_Editor.py  Main.py  Maps.py  Mute.py  Navigation.py  Plots.jl  Plots.py  Seismic_Editor.py  Trace_analysis.py  UI.py  datahandling.py  filters.jl  projects.json  trace_qc.py  utils.py
src/qgeomarine/: __init__.py  app.py  projects.json
src/qgeomarine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qgeomarine/core/: __init__.py
src/qgeomarine/core/interpretation/: __init__.py  interpretation.py
src/qgeomarine/core/maps/: __init__.py  grids.py  maps.py
src/qgeomarine/core/navigation/: __init__.py  navigation.py
src/qgeomarine/core/processing/: __init__.py  trace_qc.py
src/qgeomarine/core/signals/: __init__.py  deconvolution.py  filters.py  mute.py
src/qgeomarine/data_io/: __init__.py  magy_io.py  seismic_io.py
src/qgeomarine/ui/: __init__.py  maggy_editor.py  seismic_editor.py  ui.py
src/qgeomarine/utils/: __init__.py  utils.py
src/qgeomarine/visualizatiuon/: __init__.py
