[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgeomarine"
version = "0.1.0"
description = "Marine geophysics desktop application (seismic & magnetic)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "BETA_LICENSE" }
authors = [{ name = "Marios Karagiorgas", email = "karagiorgasmarios@gmail.com" }]
# Keep this list lean; wheels exist for Win/macOS. Heavy libs are here on purpose.
dependencies = [
  "affine==2.4.0",
  "attrs==25.3.0",
  "branca==0.8.1",
  "certifi==2025.6.15",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "click-plugins==1.1.1.2",
  "cligj==0.7.2",
  "colorama==0.4.6",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "decorator==5.2.1",
  "folium==0.18.0",
  "fonttools==4.58.4",
  "geopandas==1.1.0",
  "greenlet==3.2.3",
  "idna==3.10",
  "imageio==2.37.0",
  "Jinja2==3.1.6",
  "kiwisolver==1.4.8",
  "lazy_loader==0.4",
  "lxml==6.0.0",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.3",
  "networkx==3.5",
  "numpy==1.26.4",
  "obspy==1.4.2",
  "packaging==25.0",
  "pandas==2.3.0",
  "pillow==11.3.0",
  "pyogrio==0.11.0",
  "pyparsing==3.2.3",
  "pyproj==3.6.1",
  "PyQt6==6.9.1",
  "PyQt6-Qt6==6.9.1",
  "PyQt6-WebEngine==6.9.0",
  "PyQt6-WebEngine-Qt6==6.9.1",
  "PyQt6_sip==13.10.2",
  "pyqtgraph==0.13.3",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyWavelets==1.8.0",
  "rasterio==1.4.3",
  "requests==2.32.4",
  "scikit-image==0.22.0",
  "scipy==1.14.1",
  "segyio==1.9.12",
  "shapely==2.1.1",
  "six==1.17.0",
  "SQLAlchemy==1.4.54",
  "tifffile==2025.6.11",
  "tzdata==2025.2",
  "urllib3==2.5.0",
  "xyzservices==2025.4.0"
]

# CLI entry point: lets you run `qgeomarine`
[project.scripts]
qgeomarine = "qgeomarine.app:main"

# (Optional) Windows GUI entry without console window:
# Some frontends support this; if you want it, uncomment:
# [project.gui-scripts]
# qgeomarine = "qgeomarine.app:main"

[project.optional-dependencies]
dev = ["pytest>=7", "black>=24.0", "isort>=5.12", "pyinstaller>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# Include non-Python files inside your package (icons, qss, qml, etc.)
# Adjust the patterns to match your tree.
[tool.setuptools.package-data]
"qgeomarine" = [
  "docs/*",
  "docs/**/*",
  "resources/images/*",
  "resources/images/**/*",
]
